# updates

./: Cargo.toml
.github/workflows/: rust.yml
data/: dev.rlxos.updates.conf  system-updates.service.in
src/: database.rs  downloader.rs  element.rs  lib.rs  main.rs  meta.rs  progress.rs  repository.rs
src/cmd/: ask.rs  build.rs  check.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  status.rs  unlock.rs  update.rs  upgrade.rs
src/engine/: build.rs  builder.rs  deploy.rs  mod.rs  pull.rs  state.rs
src/progress/: mod.rs
src/server/: mod.rs
tests/elements/: neofetch.yml  sample.yml
