[package]
name = "swupd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
ostree = { version = "0.19.1", features = ["v2021_5"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
