[package]
name = "swupd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.69"
clap = "4.4.8"
console = "0.15.7"
humansize = "2.1.3"
humantime = "2.1.0"
indicatif = "0.17.7"
ostree = { version = "0.19.1", features = ["v2021_5"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
