[package]
name = "swupd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.8"
console = "0.15.7"
futures-util = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
